Switching hardcoded headlines to atom

--- a/assets/main.css
+++ b/assets/main.css
@@ -2,4 +2,6 @@
 
 @theme {
   --font-patua: "Patua", sans-serif; 
+  --font-MPLUS: "M PLUS Rounded 1c", sans-serif;
+  --figtree: "Figtree", sans-serif;
 }
