--- a/assets/main.css
+++ b/assets/main.css
@@ -2,6 +2,6 @@
 
 @theme {
   --font-patua: "Patua", sans-serif; 
-  --font-MPLUS: "M PLUS Rounded 1c", sans-serif;
+  --font-MPLUS: "'M PLUS Rounded 1c'", sans-serif;
   --figtree: "Figtree", sans-serif;
 }
