--- a/assets/main.css
+++ b/assets/main.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&family=Patua+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Figtree:ital,wght@0,300..900;1,300..900&family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&family=Patua+One&display=swap');
 
 @theme {
   --font-patua: "Patua", sans-serif; 
   --font-MPLUS: "'M PLUS Rounded 1c'", sans-serif;
   --figtree: "Figtree", sans-serif;
+  --bebas: "Bebas Neue", sans-serif;
 }
